--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "type": "commonjs",
   "dependencies": {
     "@upstash/redis": "^1.34.4",
+    "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^3.0.2",
     "chalk": "^5.4.1",
     "cloudinary": "^1.41.3",
