--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node src/index.ts",
+    "dev": "nodemon --exec ts-node src/api/server.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/api/server.js",
+    "vercel-build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
   "dependencies": {
     "@upstash/redis": "^1.34.4",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/node": "^5.1.12",
     "bcryptjs": "^3.0.2",
     "chalk": "^5.4.1",
     "cloudinary": "^1.41.3",
