--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node src/api/server.ts",
+    "dev": "nodemon --exec ts-node src/server.ts",
     "build": "tsc",
-    "start": "node dist/api/server.js",
-    "vercel-build": "tsc"
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,8 +14,6 @@
   "type": "commonjs",
   "dependencies": {
     "@upstash/redis": "^1.34.4",
-    "@vercel/analytics": "^1.5.0",
-    "@vercel/node": "^5.1.12",
     "bcryptjs": "^3.0.2",
     "chalk": "^5.4.1",
     "cloudinary": "^1.41.3",
@@ -26,7 +23,8 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
