--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/mongoose": "^5.11.96",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.8",
+    "@types/node-cron": "^3.0.11",
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
